# high_performace_opencv

./: CMakeLists.txt  README.md
cv_utils/: binaryImage.hpp  connectedComponents.hpp
test/: binary.cpp  connectedComponents.cpp
